--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
   font-family: Raleway, sans-serif;
   font-size: 1.5em;
   text-align: center;
-  background: #141414;
+  background: #09070a;
   color: #fff;
 }
