affichage des cartes en grid, face & dos, fonctionnel

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@ button:hover {
   background: rgb(153, 0, 255);
   color: #fff;
 }
+
+.card-grid {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
